--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
-Hello World
+
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
+   "http://www.w3.org/TR/html4/strict.dtd">
+<HTML>
+
+   <HEAD><!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-130471481-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-130471481-2');
+</script>
+
+
+
+
+      <TITLE>My first HTML document, for google</TITLE>
+
+
+   </HEAD>
+
+
+
+
+   <BODY>
+      <P>Hello world goooogle!
+   </BODY>
+</HTML>
+
